--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -6,7 +6,7 @@ import PaginationComponent from '@/components/ui/pagination'
 import { SITE } from '@/consts'
 import Layout from '@/layouts/Layout.astro'
 import type { PaginateFunction } from 'astro'
-import { type CollectionEntry, getCollection } from 'astro:content'
+import { getCollection } from 'astro:content'
 
 export async function getStaticPaths({
   paginate,
@@ -22,16 +22,7 @@ export async function getStaticPaths({
 
 const { page } = Astro.props
 
-const postsByYear = page.data.reduce(
-  (acc: Record<string, CollectionEntry<'blog'>[]>, post) => {
-    const year = post.data.date.getFullYear().toString()
-    ;(acc[year] ??= []).push(post)
-    return acc
-  },
-  {},
-)
-
-const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a))
+const posts = page.data
 ---
 
 <Layout title="Blog" description="Blog">
@@ -44,20 +35,15 @@ const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a))
     />
 
     <div class="flex min-h-[calc(100vh-18rem)] flex-col gap-y-8">
-      {
-        years.map((year) => (
-          <section class="flex flex-col gap-y-4">
-            <div class="font-semibold">{year}</div>
-            <ul class="not-prose flex flex-col gap-4">
-              {postsByYear[year].map((post) => (
-                <li>
-                  <BlogCard entry={post} />
-                </li>
-              ))}
-            </ul>
-          </section>
-        ))
-      }
+      <ul class="not-prose flex flex-col gap-4">
+        {
+          posts.map((post) => (
+            <li>
+              <BlogCard entry={post} />
+            </li>
+          ))
+        }
+      </ul>
     </div>
 
     <PaginationComponent
