--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,11 +7,11 @@ import SocialIcons from './SocialIcons.astro'
 <footer class="py-4">
   <Container>
     <div
-      class="flex flex-col items-center justify-center gap-y-2 sm:flex-row sm:justify-between"
+      class="font-bantayog flex flex-col items-center justify-center gap-y-2 font-normal sm:flex-row sm:justify-between"
     >
       <div class="flex items-center">
         <p class="text-center text-sm text-muted-foreground">
-          &copy; {new Date().getFullYear()} All rights reserved.
+          HENRY · &copy; {new Date().getFullYear()}
         </p>
       </div>
       <SocialIcons links={SOCIAL_LINKS} />
