--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -42,7 +42,7 @@ function buildToc(headings: Heading[]): Heading[] {
   class="group col-start-2 mx-4 block rounded-xl border p-4 xl:hidden"
 >
   <summary
-    class="flex cursor-pointer items-center justify-between text-xl font-semibold"
+    class="font-sequel flex cursor-pointer items-center justify-between text-xl font-semibold"
   >
     Table of Contents
     <Icon
