--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,7 @@ import BlogCard from '@/components/BlogCard.astro'
 import Container from '@/components/Container.astro'
 import Link from '@/components/Link.astro'
 import { buttonVariants } from '@/components/ui/button'
-import {
-  Card,
-  CardContent,
-  CardDescription,
-  CardHeader,
-  CardTitle,
-} from '@/components/ui/card'
+import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
 import { SITE } from '@/consts'
 import Layout from '@/layouts/Layout.astro'
 import { getCollection } from 'astro:content'
@@ -25,55 +19,18 @@ const blog = (await getCollection('blog'))
     <section>
       <Card>
         <CardHeader>
-          <CardTitle className="text-3xl">er·u·dite</CardTitle>
-          <CardDescription
-            >/ˈer(y)əˌdīt/ &bull; <span class="font-semibold">adjective</span
-            ></CardDescription
-          >
+          <CardTitle className="font-sequel text-3xl">LOG</CardTitle>
         </CardHeader>
         <CardContent>
-          <p class="mb-2 text-sm text-muted-foreground">
-            astro-erudite is an opinionated, no-frills static blogging template
-            built with <Link
-              href="https://astro.build"
-              class="text-foreground"
-              external
-              underline>Astro</Link
-            >, <Link
-              href="https://tailwindcss.com"
-              class="text-foreground"
-              external
-              underline>Tailwind</Link
-            >, and <Link
-              href="https://ui.shadcn.com"
-              class="text-foreground"
-              external
-              underline>shadcn/ui</Link
-            >. Extraordinarily loosely based on the <Link
-              href="https://astro-micro.vercel.app/"
-              class="text-foreground"
-              external
-              underline>Astro Micro</Link
-            > theme.
-          </p>
-          <p class="text-sm text-muted-foreground">
-            To use this template, check out the <Link
-              href="https://github.com/jktrn/astro-erudite"
-              class="text-foreground"
-              underline
-              external>GitHub</Link
-            > repository. To learn more about why this template exists, read this
-            blog post: <Link
-              href="/blog/the-state-of-static-blogs"
-              class="text-foreground"
-              underline>The State of Static Blogs in 2024</Link
-            >.
+          <p class="font-ia mb-2 text-sm text-muted-foreground">
+            I am a developer with a interest in web and app development. <br />
+            I currently focus on native iOS app development using SwiftUI.
           </p>
         </CardContent>
       </Card>
     </section>
     <section class="flex flex-col gap-y-4">
-      <h2 class="text-2xl font-bold">Latest posts</h2>
+      <!-- <h2 class="text-2xl font-bold">Latest posts</h2> -->
       <ul class="not-prose flex flex-col gap-y-4">
         {
           blog.map((post) => (
@@ -84,7 +41,7 @@ const blog = (await getCollection('blog'))
         }
       </ul>
       <div class="flex justify-center">
-        <Link
+        <!-- <Link
           href="/blog"
           class={buttonVariants({ variant: 'ghost' }) + ' group'}
         >
@@ -93,6 +50,7 @@ const blog = (await getCollection('blog'))
             >&rarr;</span
           >
         </Link>
+        -->
       </div>
     </section>
   </Container>
