--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,46 +1,87 @@
+@import url('https://fonts.cdnfonts.com/css/sequel');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.cdnfonts.com/css/solway?styles=50538,170611,50536,170612,50537,170615,50534,170614,50535,170613');
+@import url('https://fonts.cdnfonts.com/css/ia-writer-duospace?styles=25006,25007,25004,25005');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'Geist';
-  src: url('/fonts/GeistVF.woff2') format('woff2');
-  font-weight: 100 900;
+.font-guel { 
+  font-family: DM Mono, "Ownglyph guelmi";
+  font-size: 13px;
+}
+
+.font-noto {
+  font-family: DM Mono, "Noto Sans KR", sans-serif;
+  font-weight: 300;
   font-style: normal;
-  font-display: swap;
+}
+
+.font-ia {
+  font-family: iA Writer Mono S, monospace;
+  font-style: italic;
+}
+
+.font-dm { 
+  font-family: "DM Mono", "Noto Sans KR",  monospace;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.font-locus {
+  font-family: DM Mono, "locus_sangsang";
+  font-size: 0.8rem;
+}
+
+.font-bantayog { 
+  font-family: 'Bantayog';
+}
+
+.font-sequel {
+  font-family: "Sequel";
+}
+
+@font-face { 
+  font-family: 'Bantayog-Semilight';
+  src: url('/fonts/Bantayog-Semilight.otf')
 }
 
 @font-face {
-  font-family: 'Geist Mono';
-  src: url('/fonts/GeistMonoVF.woff2') format('woff2');
-  font-weight: 100 900;
+  font-family: 'Ownglyph_guelmi';
+  src: url('/fonts/Ownglyph_guelmi.ttf')
+}
+
+@font-face {
+  font-family: 'locus_sangsang';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/locus_sangsang.woff') format('woff');
+  font-weight: normal;
   font-style: normal;
-  font-display: swap;
+}
+
+.styles-module_calendar__sT1ND text {
+  fill: currentColor;
+}
+
+article {
+  & figure[data-rehype-pretty-code-figure] {
+      & pre {
+          & > code {
+              > button:has(> span) {
+                  animation-duration: 200ms;
+                  /* display: none; */
+              }
+          }
+      }
+  }
 }
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 80.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 80.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 80.1%;
-    --accent-foreground: 0 0% 9%;
-    --additive: 112 50% 36%;
-    --additive-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-  }
-  .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --primary: 34 54% 81%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
@@ -54,12 +95,64 @@
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
+
+    --chart-1: 34 54% 81%;
+    --chart-2: 34 34% 73%;
+    --chart-3: 35 22% 65%;
+    --chart-4: 35 16% 57%;
+    --chart-5: 35 12% 41%;
+    --chart-6: 33 12% 33%;
+    --chart-7: 32 12% 25%;
+  }
+
+  .dark {
+    --background: 0 0% 3.9%;
+    --foreground: 0 0% 98%;
+    --primary: 34 54% 81%;
+    --primary-foreground: 0 0% 9%;
+    --secondary: 0 0% 14.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
+    --accent: 0 0% 14.9%;
+    --accent-foreground: 0 0% 98%;
+    --additive: 112 50% 36%;
+    --additive-foreground: 0 0% 9%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
+
+    --chart-1: 34 54% 81%;
+    --chart-2: 34 34% 73%;
+    --chart-3: 35 22% 65%;
+    --chart-4: 35 16% 57%;
+    --chart-5: 35 12% 41%;
+    --chart-6: 33 12% 33%;
+    --chart-7: 32 12% 25%;
   }
 
   *,
   *::before,
   *::after {
     @apply border-border;
+  }
+
+
+  /*
+  ==========
+  blockquote
+  ==========
+  */
+  blockquote > p {
+    font-family: "iA Writer Mono S", 'locus_sangsang' !important;
+    display: inline;
+  }
+  blockquote > p:before {
+    content: none !important;
+  }
+  blockquote > p:after {
+    content: none !important;
   }
 
   html {
@@ -81,12 +174,32 @@
   }
 }
 
-@layer components {
-  article {
-    @apply prose-headings:scroll-mt-20 prose-headings:break-words first:prose-headings:mt-0 prose-p:break-words prose-a:!break-words prose-a:!decoration-muted-foreground prose-a:underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-foreground prose-pre:!px-0 prose-img:mx-auto;
 
+
+@layer components {
+
+  h1, h2, h3, h4, h5 {
+    @apply font-heading;
+  }
+      
+  article {
+    @apply prose-headings:scroll-mt-20 prose-headings:break-words;
+    @apply prose-p:break-words;
+    @apply prose-a:!text-primary prose-a:!decoration-primary/50 prose-a:!underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-inherit;
+    @apply prose-blockquote:!not-italic prose-blockquote:!text-muted-foreground;
+    @apply prose-pre:!px-0;
+    @apply prose-img:mx-auto prose-img:rounded-xl prose-img:border;
+    @apply prose-table:mx-auto prose-table:block prose-table:max-w-fit prose-table:overflow-x-auto prose-td:break-words;
+    @apply sm:prose-table:mx-0 sm:prose-table:table sm:prose-table:max-w-none;
+
+    /* Fixing Katex display */
     .katex-display {
       @apply overflow-x-auto overflow-y-hidden py-4;
+    }
+
+    /* Fixing Katex fractions */
+    .frac-line {
+      @apply border-foreground;
     }
 
     /* Removes background from <mark> elements */
@@ -107,7 +220,7 @@
 
     /* Inline code */
     :not(pre) > code {
-      @apply relative rounded bg-muted/50 px-[0.3rem] py-[0.2rem] font-mono text-sm font-medium;
+      @apply relative rounded bg-muted/50 px-[0.3rem] py-[0.2rem] font-mono text-sm font-medium before:!content-none after:!content-none;
     }
 
     /* Code blocks */
@@ -127,6 +240,7 @@
       /* Code block styles */
       pre {
         @apply static max-h-[600px] overflow-auto rounded-xl border bg-secondary/20 py-4 text-sm leading-loose;
+
 
         /* Code block content */
         > code {
@@ -157,6 +271,24 @@
             @apply bg-muted-foreground/40 py-[7px];
           }
 
+          .tab {
+            @apply relative;
+          }
+
+          .tab::before {
+            @apply absolute opacity-30;
+            content: '⇥';
+          }
+
+          /* Skip lines */
+          .skip {
+            @apply my-2 bg-foreground/5 text-center text-foreground;
+
+            &::before {
+              content: '' !important;
+            }
+          }
+
           /* Diff lines */
           .diff {
             &.add {
@@ -164,13 +296,21 @@
             }
             &.remove {
               @apply bg-destructive/15;
+              &::before {
+                content: '-';
+                counter-increment: none;
+              }
+            }
+            &.highlight {
+              @apply bg-foreground/10;
             }
           }
 
           /* Copy button */
           > button:has(> span) {
-            @apply right-0.5 top-[3px] m-0 size-8 rounded-md bg-background p-1 backdrop-blur-none transition-all;
+            @apply right-1 top-1 m-0 size-8 rounded-lg bg-secondary p-1 backdrop-blur-none transition-all duration-200;
           }
+          
         }
       }
     }
