--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -43,7 +43,7 @@ const authors = await parseAuthors(entry.data.authors ?? [])
       <h3 class="mb-1 text-lg font-semibold font-sequel">
         {entry.data.title}
       </h3>
-      <p class="mb-2 font-guel text-sm text-muted-foreground">
+      <p class="mb-2 font-locus text-sm text-muted-foreground">
         {entry.data.description}
       </p>
       <div
