--- a/src/components/TableOfContentsHeading.astro
+++ b/src/components/TableOfContentsHeading.astro
@@ -6,7 +6,7 @@ const { heading } = Astro.props
 ---
 
 <li
-  class="font-dm list-inside list-disc px-4 py-1.5 text-sm text-foreground/60 xl:list-none xl:p-0"
+  class="font-ia list-inside list-disc px-4 py-1.5 text-sm text-foreground/60 xl:list-none xl:p-0"
 >
   <Link
     href={'#' + heading.slug}
