--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,10 +29,9 @@ const projects = await getCollection('projects')
           <br />
           2020.02-2020.06 : IPS Papaya(주)
           <br />
-          <h1 style={{ fontFamily: 'Sequel', fontSize: '1.15rem' }}>
-            Tech Stack
+          <h1 class="text-2xl font-semibold" style={{ fontFamily: 'Bantayog' }}>
+            tech stack
           </h1>
-          <br />
           <p class="text-sm">
             Swift · SwiftUI
             <br />
@@ -47,7 +46,7 @@ const projects = await getCollection('projects')
           <br />
         </p>
 
-        <h2 class="mb-4 text-2xl font-semibold">Projects</h2>
+        <h2 class="font-bantayog mb-4 text-2xl font-semibold">projects</h2>
         <div class="grid gap-4 sm:grid-cols-1 lg:grid-cols-1">
           {projects.map((project) => <ProjectCard project={project} />)}
         </div>
