[FEAT] : 오디오 추가

--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -39,7 +39,12 @@ const getSocialLink = ({ href, label }: SocialLink) => ({
             href={href}
             aria-label={ariaLabel}
             title={ariaLabel}
-            class={buttonVariants({ variant: 'outline', size: 'icon' })}
+            style={{ background: '#282828' }}
+            class={buttonVariants({
+              variant: 'outline',
+              size: 'icon',
+              background: 'white',
+            })}
             external
           >
             <Icon name={iconName} class="size-4" />
