--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,10 +7,10 @@ import SocialIcons from './SocialIcons.astro'
 <footer class="py-4">
   <Container>
     <div
-      class="font-bantayog flex flex-col items-center justify-center gap-y-2 font-normal sm:flex-row sm:justify-between"
+      class="font-bantayog flex flex-col items-center justify-center gap-y-2 font-light sm:flex-row sm:justify-between"
     >
       <div class="flex items-center">
-        <p class="text-center text-sm text-muted-foreground">
+        <p class="text-center text-xs text-muted-foreground">
           HENRY · &copy; {new Date().getFullYear()}
         </p>
       </div>
