--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,10 @@
 ---
-import BlogCard from '@/components/BlogCard.astro'
-import Container from '@/components/Container.astro'
-import Link from '@/components/Link.astro'
-import { buttonVariants } from '@/components/ui/button'
-import { Card, CardContent, CardHeader, CardTitle } from '@/components/ui/card'
+import Player from '@/components/bento/Player'
 import { SITE } from '@/consts'
 import Layout from '@/layouts/Layout.astro'
 import { getCollection } from 'astro:content'
+
+import PhaserGame from '@/components/ui/phaser'
 
 const blog = (await getCollection('blog'))
   .filter((post) => !post.data.draft)
@@ -15,43 +13,24 @@ const blog = (await getCollection('blog'))
 ---
 
 <Layout title="Home" description={SITE.DESCRIPTION}>
-  <Container class="flex flex-col gap-y-6">
-    <section>
-      <Card>
-        <CardHeader>
-          <CardTitle className="font-sequel text-3xl">LOG</CardTitle>
-        </CardHeader>
-        <CardContent>
-          <p class="font-ia mb-2 text-sm text-muted-foreground">
-            I am a developer with a interest in web and app development. <br />
-            I currently focus on native iOS app development using SwiftUI.
-          </p>
-        </CardContent>
-      </Card>
-    </section>
-    <section class="flex flex-col gap-y-4">
-      <!-- <h2 class="text-2xl font-bold">Latest posts</h2> -->
-      <ul class="not-prose flex flex-col gap-y-4">
-        {
-          blog.map((post) => (
-            <li>
-              <BlogCard entry={post} />
-            </li>
-          ))
-        }
-      </ul>
-      <div class="flex justify-center">
-        <!-- <Link
-          href="/blog"
-          class={buttonVariants({ variant: 'ghost' }) + ' group'}
-        >
-          See all posts <span
-            class="ml-1.5 transition-transform group-hover:translate-x-1"
-            >&rarr;</span
-          >
-        </Link>
-        -->
-      </div>
-    </section>
-  </Container>
+  <html>
+    <head>
+      <script src="/bundle.min.js" defer></script>
+      <!-- <script src="https://unpkg.com/wavesurfer.js"></script> -->
+      <!-- Phaser 게임 번들 -->
+    </head>
+    <body>
+      <section class="mx-auto max-w-[800px] px-4" aria-label="Phaser Game">
+        <PhaserGame />
+        <!-- 게임 -->
+      </section>
+    </body>
+  </html>
+
+  <section
+    class="mx-auto grid max-w-[800px] grid-cols-3 gap-5 px-4"
+    aria-label="Personal information and activity grid"
+  >
+    <Player client:load />
+  </section>
 </Layout>
