--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+/* snow-start */
+@import 'snow.css';
+/* snow-end */
+
 @import url('https://fonts.cdnfonts.com/css/sequel');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
@@ -7,6 +11,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 
 /* audio */
