--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
-import Player from '@/components/bento/Player'
 import { SITE } from '@/consts'
 import Layout from '@/layouts/Layout.astro'
 import { getCollection } from 'astro:content'
 
+import Player from '@/components/bento/Player'
+import Snow from '@/components/bento/Snow'
 import PhaserGame from '@/components/ui/phaser'
 
 const blog = (await getCollection('blog'))
@@ -18,6 +19,7 @@ const blog = (await getCollection('blog'))
       <script src="/bundle.min.js" defer></script>
       <!-- <script src="https://unpkg.com/wavesurfer.js"></script> -->
       <!-- Phaser 게임 번들 -->
+      <link rel="stylesheet" href="styles/snow.css" />
     </head>
     <body>
       <section class="mx-auto max-w-[800px] px-4" aria-label="Phaser Game">
@@ -32,5 +34,7 @@ const blog = (await getCollection('blog'))
     aria-label="Personal information and activity grid"
   >
     <Player client:load />
+
+    <Snow client:load />
   </section>
 </Layout>
