[FEAT] : player ui 수정중

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,6 @@ import Layout from '@/layouts/Layout.astro'
 import { getCollection } from 'astro:content'
 
 import Player from '@/components/bento/Player'
-import Snow from '@/components/bento/Snow'
 import PhaserGame from '@/components/ui/phaser'
 
 const blog = (await getCollection('blog'))
@@ -30,11 +29,12 @@ const blog = (await getCollection('blog'))
   </html>
 
   <section
-    class="mx-auto grid max-w-[800px] grid-cols-3 gap-5 px-4"
-    aria-label="Personal information and activity grid"
+    class="mx-auto grid max-w-[800px] grid-cols-2 gap-4 px-4 [grid-template-areas:'a_a'_'a_a'_'b_b'_'b_b'_'e_e'_'h_i'_'h_c'_'k_c'_'d_d'_'d_d'_'g_g'_'g_g'_'f_f'_'j_j'_'j_j'] *:rounded-3xl *:border *:bg-secondary/25 *:bg-cover *:bg-center *:bg-no-repeat sm:max-w-[800px] sm:grid-cols-3 sm:[grid-template-areas:'a_a'_'b_d'_'e_e'_'j_g'_'h_i'_'h_c'_'k_c'_'f_f'] xl:max-w-[800px] xl:grid-cols-3 xl:[grid-template-areas:'a_a_b_c'_'d_e_e_c'_'h_f_f_g'_'h_i_j_k'] xl:[&:hover:has(>.has-overlay:hover)>.first>.overlay]:opacity-100 xl:[&:hover>*:not(.first):hover_.overlay]:opacity-100"
   >
-    <Player client:load />
-
-    <Snow client:load />
+    <div
+      class="has-overlay relative flex aspect-square items-center justify-center [grid-area:i] hover:bg-none xl:bg-[url('/static/bento/github-silhouette.webp')]"
+    >
+      <Player client:load />
+    </div>
   </section>
 </Layout>
