--- a/src/styles/snow.scss
+++ b/src/styles/snow.scss
@@ -15,7 +15,7 @@ body {
 
 .snow {
   $total: 200;
-  position: absolute;
+  position: relative;
   width: 10px;
   height: 10px;
   background: white;
