--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,10 +29,10 @@ const blog = (await getCollection('blog'))
   </html>
 
   <section
-    class="mx-auto grid max-w-[800px] grid-cols-2 gap-4 px-4 [grid-template-areas:'a_a'_'a_a'_'b_b'_'b_b'_'e_e'_'h_i'_'h_c'_'k_c'_'d_d'_'d_d'_'g_g'_'g_g'_'f_f'_'j_j'_'j_j'] *:rounded-3xl *:border *:bg-secondary/25 *:bg-cover *:bg-center *:bg-no-repeat sm:max-w-[800px] sm:grid-cols-3 sm:[grid-template-areas:'a_a'_'b_d'_'e_e'_'j_g'_'h_i'_'h_c'_'k_c'_'f_f'] xl:max-w-[800px] xl:grid-cols-3 xl:[grid-template-areas:'a_a_b_c'_'d_e_e_c'_'h_f_f_g'_'h_i_j_k'] xl:[&:hover:has(>.has-overlay:hover)>.first>.overlay]:opacity-100 xl:[&:hover>*:not(.first):hover_.overlay]:opacity-100"
+    class="mx-auto grid max-w-[800px] grid-cols-1 gap-4 px-16 [grid-template-areas:'a'_'b'_'c'_'d'_'e'_'f'_'g'_'h'_'i'_'j'_'k'] sm:grid-cols-2 sm:[grid-template-areas:'a_a'_'b_d'_'e_e'_'j_g'_'h_i'_'h_c'_'k_c'_'f_f'] xl:grid-cols-3 xl:[grid-template-areas:'a_a_b_c'_'d_e_e_c'_'h_f_f_g'_'h_i_j_k']"
   >
     <div
-      class="has-overlay relative flex aspect-square items-center justify-center [grid-area:i] hover:bg-none xl:bg-[url('/static/bento/github-silhouette.webp')]"
+      class="has-overlay relative flex aspect-square max-w-[340px] items-center justify-center rounded-xl bg-[url('/assets/winter_bg/mourad-saadi-ZXbeOqF1NFQ-unsplash.jpg')] bg-cover bg-center [grid-area:i]"
     >
       <Player client:load />
     </div>
