--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -1,7 +1,7 @@
 ---
 import { Badge } from '@/components/ui/badge'
 import { Separator } from '@/components/ui/separator'
-import { formatDate, parseAuthors, readingTime } from '@/lib/utils'
+import { formatDate, readingTime } from '@/lib/utils'
 import type { CollectionEntry } from 'astro:content'
 import Link from './Link.astro'
 
@@ -18,7 +18,7 @@ const readTime = readingTime(entry.body)
 ---
 
 <div
-  class="not-prose rounded-xl bg-secondary/80 p-6 transition-colors duration-300 ease-in-out hover:bg-secondary/50"
+  class="not-prose rounded-md border p-6 transition-colors duration-300 ease-in-out hover:bg-secondary/50"
 >
   <Link
     href={`/${entry.collection}/${entry.slug}`}
