--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,15 @@
 ---
 import { SITE } from '@/consts'
 import Layout from '@/layouts/Layout.astro'
-import { getCollection } from 'astro:content'
 
 import Player from '@/components/bento/Player'
 import PhaserGame from '@/components/ui/phaser'
-
-const blog = (await getCollection('blog'))
-  .filter((post) => !post.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  .slice(0, SITE.NUM_POSTS_ON_HOMEPAGE)
 ---
 
 <Layout title="Home" description={SITE.DESCRIPTION}>
   <html>
     <head>
-      <script src="/bundle.min.js" defer></script>
+      <script is:inline src="/bundle.min.js" defer></script>
       <!-- <script src="https://unpkg.com/wavesurfer.js"></script> -->
       <!-- Phaser 게임 번들 -->
       <link rel="stylesheet" href="styles/snow.css" />
@@ -28,13 +22,15 @@ const blog = (await getCollection('blog'))
     </body>
   </html>
 
+  <section class="mx-auto flex max-w-[800px] justify-start">
+    <Player client:load />
+  </section>
   <section
     class="mx-auto grid max-w-[800px] grid-cols-1 gap-4 px-16 [grid-template-areas:'a'_'b'_'c'_'d'_'e'_'f'_'g'_'h'_'i'_'j'_'k'] sm:grid-cols-2 sm:[grid-template-areas:'a_a'_'b_d'_'e_e'_'j_g'_'h_i'_'h_c'_'k_c'_'f_f'] xl:grid-cols-3 xl:[grid-template-areas:'a_a_b_c'_'d_e_e_c'_'h_f_f_g'_'h_i_j_k']"
   >
     <div
-      class="has-overlay relative flex aspect-square max-w-[340px] items-center justify-center rounded-xl bg-[url('/assets/winter_bg/mourad-saadi-ZXbeOqF1NFQ-unsplash.jpg')] bg-cover bg-center [grid-area:i]"
+      class="has-overlay relative flex aspect-square max-w-[340px] items-center justify-center rounded-xl [grid-area:i]"
     >
-      <Player client:load />
     </div>
   </section>
 </Layout>
