--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
-import { SITE } from '@/consts'
-import Layout from '@/layouts/Layout.astro'
-
 import Player from '@/components/bento/Player'
+import Link from '@/components/Link.astro'
 import PhaserGame from '@/components/ui/phaser'
+import { SITE, SOCIAL_LINKS } from '@/consts'
+import Layout from '@/layouts/Layout.astro'
+import { Icon } from 'astro-icon/components'
 ---
 
 <Layout title="Home" description={SITE.DESCRIPTION}>
@@ -12,7 +13,6 @@ import PhaserGame from '@/components/ui/phaser'
       <script is:inline src="/bundle.min.js" defer></script>
       <!-- <script src="https://unpkg.com/wavesurfer.js"></script> -->
       <!-- Phaser 게임 번들 -->
-      <link rel="stylesheet" href="styles/snow.css" />
     </head>
     <body>
       <section class="mx-auto max-w-[800px] px-4" aria-label="Phaser Game">
@@ -26,11 +26,67 @@ import PhaserGame from '@/components/ui/phaser'
     <Player client:load />
   </section>
   <section
-    class="mx-auto grid max-w-[800px] grid-cols-1 gap-4 px-16 [grid-template-areas:'a'_'b'_'c'_'d'_'e'_'f'_'g'_'h'_'i'_'j'_'k'] sm:grid-cols-2 sm:[grid-template-areas:'a_a'_'b_d'_'e_e'_'j_g'_'h_i'_'h_c'_'k_c'_'f_f'] xl:grid-cols-3 xl:[grid-template-areas:'a_a_b_c'_'d_e_e_c'_'h_f_f_g'_'h_i_j_k']"
+    class="md:[grid-template-areas:
+      'a_m_b_n'_'d_e_e_c'_'h_f_f_g'_'h_i_j_k'] mx-auto
+      grid
+      max-w-[375px]
+      max-w-screen-md
+      grid-cols-4
+      gap-4
+      px-4
+      [grid-template-areas:'a_m'_'b_b'_'b_b'_'b_b'_'e_e'_'h_i'_'h_c'_'k_c'_'d_d'_'d_d'_'g_g'_'g_g'_'f_f'_'j_j'_'j_j']
+      *:rounded-3xl
+      *:border
+      sm:max-w-screen-md
+      sm:grid-cols-4
+      sm:[grid-template-areas:'a_m_b_n'_'d_e_e_c'_'h_f_f_g'_'h_i_j_k']
+      md:px-0
+      xl:max-w-screen-md
+      xl:grid-cols-4
+      xl:[grid-template-areas:'a_m_b_n'_'d_e_e_c'_'h_f_f_g'_'h_i_j_k']
+      xl:[&:hover:has(>.has-overlay:hover)>.first>.overlay]:opacity-100
+      xl:[&:hover>*:not(.first):hover_.overlay]:opacity-100"
   >
-    <div
-      class="has-overlay relative flex aspect-square max-w-[340px] items-center justify-center rounded-xl [grid-area:i]"
+    <Link
+      href={SOCIAL_LINKS.find((link) => link.label === 'GitHub')?.href || '#'}
+      title="Visit my GitHub profile"
+      aria-label="Visit my GitHub profile"
+      external
     >
-    </div>
+      <div
+        class="has-overlay relative flex aspect-square items-center justify-center [grid-area:m] hover:bg-none"
+      >
+        <div
+          class="overlay absolute inset-0 size-full rounded-3xl bg-gray-900 transition-opacity duration-200 xl:opacity-0"
+        >
+        </div>
+        <Icon
+          name="mdi:github"
+          class="absolute z-[1] size-1/2 text-primary sm:size-24"
+          aria-hidden="true"
+        />
+      </div>
+    </Link>
+
+    <Link href="mailto:c.henry.9209@gmail.com" external>
+      <div
+        class="has-overlay relative flex aspect-square items-center justify-center [grid-area:a] hover:bg-none"
+      >
+        <div
+          class="overlay absolute inset-0 size-full rounded-3xl bg-gray-900 transition-opacity duration-200 xl:opacity-0"
+        >
+        </div>
+
+        <Icon
+          name="mdi:at"
+          class="absolute z-[1] size-1/2 text-primary sm:size-24"
+          aria-hidden="true"
+        />
+        <div
+          class="absolute bottom-0 right-0 m-3 flex w-fit items-end rounded-full border bg-secondary/50 p-1 text-primary transition-all duration-300 hover:rotate-12 hover:ring-1 hover:ring-primary"
+        >
+        </div>
+      </div>
+    </Link>
   </section>
 </Layout>
