--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ const projects = await getCollection('projects')
 
     <section>
       <div class="min-w-full">
-        <h1 class="mb-4 text-3xl font-bold">about</h1>
+        <h1 class="mb-4 text-3xl font-bold">About</h1>
         <p class="font-locus mb-8 text-xl dark:prose-invert">
           안녕하세요. 저는 이찬행 이라고 합니다. 컴퓨터 공학과를 중퇴 후,
           부트캠프 과정을 수료, 리액트 프론트엔드 개발을 시작하였으며 이후
@@ -29,9 +29,7 @@ const projects = await getCollection('projects')
           <br />
           2020.02-2020.06 : IPS Papaya(주)
           <br />
-          <h1 class="text-2xl font-semibold" style={{ fontFamily: 'Bantayog' }}>
-            tech stack
-          </h1>
+          <h1 class="text-2xl font-semibold">Tech Stack</h1>
           <p class="text-sm">
             Swift · SwiftUI
             <br />
@@ -46,7 +44,7 @@ const projects = await getCollection('projects')
           <br />
         </p>
 
-        <h2 class="font-bantayog mb-4 text-2xl font-semibold">projects</h2>
+        <h2 class="mb-4 text-2xl font-semibold">Projects</h2>
         <div class="grid gap-4 sm:grid-cols-1 lg:grid-cols-1">
           {projects.map((project) => <ProjectCard project={project} />)}
         </div>
