--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -18,7 +18,7 @@ const readTime = readingTime(entry.body)
 ---
 
 <div
-  class="not-prose rounded-md border p-6 transition-colors duration-300 ease-in-out hover:bg-secondary/50"
+  class="not-prose rounded-md py-6 transition-colors duration-300 ease-in-out"
 >
   <Link
     href={`/${entry.collection}/${entry.slug}`}
