--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,11 +5,11 @@ import Container from '@/components/Container.astro'
 <footer class="py-4">
   <Container>
     <div
-      class="font-bantayog flex flex-col items-center justify-center gap-y-2 font-light sm:flex-row sm:justify-between"
+      class="font-dm flex flex-col items-center justify-center gap-y-2 font-light sm:flex-row sm:justify-between"
     >
       <div class="flex items-center">
         <p class="text-center text-xs text-muted-foreground">
-          HENRY · &copy; {new Date().getFullYear()}
+          henry · &copy; {new Date().getFullYear()}
         </p>
       </div>
     </div>
