--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -127,9 +127,10 @@ canvas {
 
 .font-noto {
   font-family: DM Mono, "Noto Sans KR", sans-serif;
-  font-weight: 500;
+  font-weight: 200;
   font-style: normal;
   font-size: 12px;
+  letter-spacing: 2px;
 }
 
 .font-ia {
@@ -160,6 +161,9 @@ canvas {
 .font-sequel {
   font-family: "Sequel";
 }
+.font-google { 
+  font-family: "Google Sans Mono", monospace;
+}
 
 .font-line { 
   font-family: LineSeedJPEN, "LineSeedKR";
@@ -171,6 +175,11 @@ canvas {
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
+}
+
+@font-face { 
+  font-family: "Google-Sans-Mono-Regular";
+  src:url('../../public/fonts/gsm/Google-Sans-Mono-Regular.ttf')
 }
 
 @font-face { 
@@ -210,8 +219,25 @@ article {
 }
 
 @layer base {
+
   :root {
-    --background: 0 0% 3.9%;
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 0 0% 80.1%;
+    --secondary-foreground: 0 0% 9%;
+    --muted: 0 0% 80.1%;
+    --muted-foreground: 0 0% 45.1%;
+    --accent: 0 0% 80.1%;
+    --accent-foreground: 0 0% 9%;
+    --additive: 112 50% 36%;
+    --additive-foreground: 0 0% 9%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
+    /* --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --primary: 34 54% 81%;
     --primary-foreground: 0 0% 9%;
@@ -234,7 +260,7 @@ article {
     --chart-4: 35 16% 57%;
     --chart-5: 35 12% 41%;
     --chart-6: 33 12% 33%;
-    --chart-7: 32 12% 25%;
+    --chart-7: 32 12% 25%; */
   }
 
   .dark {
@@ -362,7 +388,7 @@ article {
 
       /* Code block titles */
       [data-rehype-pretty-code-title] {
-        @apply break-words rounded-t-xl border-x border-t px-4 py-2 text-sm font-medium text-foreground;
+        @apply break-words rounded-t-md bg-gray-50 border-x border-t px-4 py-2 text-sm font-medium text-foreground font-google;
 
         /* Remove top margin from code block if a title is present */
         & + pre {
@@ -372,7 +398,7 @@ article {
 
       /* Code block styles */
       pre {
-        @apply static max-h-[600px] overflow-auto rounded-xl border bg-secondary/20 py-4 text-sm leading-loose;
+        @apply static max-h-[600px] overflow-auto rounded-md border bg-white py-4 text-sm leading-loose;
 
 
         /* Code block content */
