--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -155,7 +155,7 @@ canvas {
 }
 
 .font-bantayog { 
-  font-family: 'Bantayog';
+  font-family: 'Bantayog-Semilight';
 }
 
 .font-sequel {
@@ -264,7 +264,23 @@ article {
   }
 
   .dark {
-    --background: 0 0% 3.9%;
+      --background: 0 0% 100%;
+      --foreground: 0 0% 3.9%;
+      --primary: 0 0% 9%;
+      --primary-foreground: 0 0% 98%;
+      --secondary: 0 0% 80.1%;
+      --secondary-foreground: 0 0% 9%;
+      --muted: 0 0% 80.1%;
+      --muted-foreground: 0 0% 45.1%;
+      --accent: 0 0% 80.1%;
+      --accent-foreground: 0 0% 9%;
+      --additive: 112 50% 36%;
+      --additive-foreground: 0 0% 9%;
+      --destructive: 0 84.2% 60.2%;
+      --destructive-foreground: 0 0% 98%;
+      --border: 0 0% 89.8%;
+      --ring: 0 0% 3.9%;
+    /* --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --primary: 34 54% 81%;
     --primary-foreground: 0 0% 9%;
@@ -279,7 +295,7 @@ article {
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    --ring: 0 0% 83.1%; */
 
     --chart-1: 34 54% 81%;
     --chart-2: 34 34% 73%;
